--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,19 @@ header h1 {
 }
 
 .weather-info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: flex-start;
 
 }
 
 .five-day {
+  background-color: #df73ff;
 
+}
+
+.current-day {
+  background-color: #7fffd4;
 }
