--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,46 @@ header h1 {
   background-color: #3fff00;
 }
 
+.sidebar h2 {
+
+}
+
+@media (min-width: 768px) {
+  .sidebar {
+    width: 300px;
+    height: calc(100vh - 100px);
+  }
+}
+
+.search {
+  display: flex;
+}
+
+.search input {
+  max-width: 200px;
+  height: 40px;
+  margin-right: 10px;
+  padding: 0 10px;
+}
+
+.search-button {
+  min-width: 40px;
+  height: 40px;
+  background: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.search-button img {
+  width: 20px;
+}
+
+#search-history {
+
+}
+
 .weather-info {
   width: 100%;
   display: flex;
@@ -62,9 +102,13 @@ header h1 {
 
 .five-day {
   background-color: #df73ff;
+  display: grid;
+  gap: 20px;
 
 }
 
 .current-day {
+  display: flex;
+  flex-direction: column;
   background-color: #7fffd4;
 }
