--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,15 +62,16 @@ header h1 {
   }
 }
 
-.search {
+/* .search {
   display: flex;
-}
+} */
 
 .search input {
   max-width: 200px;
   height: 40px;
   margin-right: 10px;
   padding: 0 10px;
+  float: left;
 }
 
 .search-button {
