--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,7 @@ header h1 {
   background-color: #3fff00;
 }
 
-.sidebar h2 {
 
-}
 
 @media (min-width: 768px) {
   .sidebar {
@@ -75,17 +73,17 @@ header h1 {
 }
 
 .search-button {
-  min-width: 40px;
+  max-width: 100%;
   height: 40px;
+  width: 40px;
   background: orange;
   display: flex;
-  justify-content: center;
-  align-items: center;
+ 
   cursor: pointer;
 }
 
 .search-button img {
-  width: 20px;
+  width: 40px;
 }
 
 .history {
