--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,11 @@ header h1 {
  justify-content: flex-start;
 }
 
+.history ul {
+  list-style: none;
+  font-size: 20px;
+}
+
 .weather-info {
   width: 100%;
   display: flex;
